# sme-legal-assistant

./: .gitignore  ARCHITECTURE.md  README.md  THUYET_MINH.md  colab_hybrid_rerank.ipynb  colab_test_retune_only.ipynb  pyproject.toml  requirements.txt  rerank_retune.py  retune_standalone.py  run.py
docs/: RUN_GUIDE.md  competition_brief.md
notebooks/: 01_data_exploration.ipynb  02_retrieval_eval.ipynb  03_threshold_tuning.ipynb
scripts/: error_analysis.py  f2_simulation.py  patch_experimental_notebooks.py  patch_notebook.py  patch_notebook_clone.py  patch_test_notebook.py
src/vpl/: __init__.py  cache.py  evaluate.py  pipeline.py  settings.py  submit.py
src/vpl/answer/: __init__.py  generator.py  postprocess.py  prompts.py
src/vpl/corpus/: __init__.py  chunker.py  loader.py  schema.py
src/vpl/search/: __init__.py  expander.py  hybrid.py  reranker.py
src/vpl/store/: __init__.py  bm25.py  vectors.py
tools/: ask.py  optimize_submission.py
