[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vietphaply-rag"
version = "0.1.0"
description = "Vietnamese Legal RAG pipeline for R2AI2026 competition"
requires-python = ">=3.10,<3.13"
dependencies = [
    "datasets>=2.18.0",
    "huggingface_hub>=0.20.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
index = [
    "rank-bm25>=0.2.2",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0,<3.4.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "underthesea>=6.0.0",
]
generate = [
    "unsloth",
]
eval = [
    "pandas>=2.0.0",
]
all = [
    "vietphaply-rag[index]",
    "vietphaply-rag[eval]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"vpl" = ["py.typed"]
